k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: prod
    project: central-platform
    managed-by: argocd
